<resources>
    <string name="app_name">uLearn</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="hint_firstName">First Name</string>
    <string name="first_name">First Name</string>

    <string name="hint_lastName">Last Name</string>
    <string name="last_name">Last Name</string>

    <string name="hint_username">Username</string>
    <string name="username">Username</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_live_chat">LiveChat</string>
    <string name="title_activity_main2">Main2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_games">Games</string>

    <string name="games">Games</string>
    <string name="profile">Profile</string>
    <string name="your_friends">Your Friends</string>
    <string name="your_languages">Your Languages</string>
    <string name="faq">F.A.Q</string>
    <string name="live_chat">Live Chat</string>
    <string name="settings">Settings</string>

    <string name="game_time">Time</string>
    <string name="game_score">Score</string>

    <string name="your_score">Your Score</string>
    <string name="high_score">High Score</string>
    <string name="friends_score">Friends Score</string>

    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="retry">Retry</string>
    <string name="return_to_games">Return To Games</string>

    <string name="card_back_title">Card back</string>
    <string name="card_back_description">Card back description</string>
    <string name="description_image_1">image 1 description</string>

    <string name="card_matching_game">Verbs</string>
    <string name="direction_game">Directions</string>
    <string name="sports_game">Sports</string>
    <string name="order_up_game">Order Up</string>
</resources>
