<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_games"
            android:title="@string/games"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_your_friends"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/your_friends" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_signout"
            android:title="@string/sign_out" />
    </group>
</menu>
