<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.tmetade.ulearn.GameFinish">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_your_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/your_score"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            tools:text="@string/your_score" />

        <TextView
            android:id="@+id/text_user_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="150"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/text_high_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/high_score"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            tools:text="@string/high_score" />

        <TextView
            android:id="@+id/text_user_high_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="250"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/text_friend_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/friends_score"
            android:textColor="@android:color/black"
            android:textSize="30dp"
            tools:text="@string/friends_score" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="DragonSlayer34"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="330"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="RealmRuler"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="130"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NightHawk78"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/retry"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/games_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/return_to_games"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
